--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,3 @@
-# .github/workflows/build-all.yml
-
-# .github/workflows/build-all.yml
-
 name: Build Cross-Platform Releases
 
 on:
@@ -22,21 +18,13 @@ jobs:
           dotnet-version: '6.0.x'
 
       - name: Publish Self-Contained Win-x64
-        run: |
-          dotnet publish -c Release \
-            -r win-x64 \
-            --self-contained true \
-            -p:PublishSingleFile=true \
-            -p:PublishTrimmed=true \
-            -p:IncludeNativeLibrariesForSelfExtract=true \
-            -o ./publish
+        run: dotnet publish -c Release -r win-x64 --self-contained true -p:PublishSingleFile=true -p:PublishTrimmed=true -p:IncludeNativeLibrariesForSelfExtract=true -o ./publish
 
       - name: Zip Artifact
-        run: |
-          Compress-Archive -Path "./publish/*" -DestinationPath "sharp-vless-windows-x64.zip"
+        run: Compress-Archive -Path "./publish/*" -DestinationPath "sharp-vless-windows-x64.zip"
 
       - name: Upload Artifact
-        uses: actions/upload-artifact@v4  # ✅ Обновлено с v3 на v4
+        uses: actions/upload-artifact@v4
         with:
           name: sharp-vless-windows-x64
           path: sharp-vless-windows-x64.zip
@@ -64,25 +52,16 @@ jobs:
           dotnet-version: '6.0.x'
 
       - name: Publish Self-Contained Linux-x64
-        run: |
-          dotnet publish -c Release \
-            -r linux-x64 \
-            --self-contained true \
-            -p:PublishSingleFile=true \
-            -p:PublishTrimmed=true \
-            -p:EnableCompressionInSingleFile=true \
-            -o ./publish
+        run: dotnet publish -c Release -r linux-x64 --self-contained true -p:PublishSingleFile=true -p:PublishTrimmed=true -p:EnableCompressionInSingleFile=true -o ./publish
 
       - name: Make executable
-        run: |
-          chmod +x ./publish/sharp-vless
+        run: chmod +x ./publish/sharp-vless
 
       - name: Tar Artifact
-        run: |
-          tar -czf sharp-vless-linux-x64.tar.gz -C ./publish .
+        run: tar -czf sharp-vless-linux-x64.tar.gz -C ./publish .
 
       - name: Upload Artifact
-        uses: actions/upload-artifact@v4  # ✅ Обновлено
+        uses: actions/upload-artifact@v4
         with:
           name: sharp-vless-linux-x64
           path: sharp-vless-linux-x64.tar.gz
@@ -110,25 +89,16 @@ jobs:
           dotnet-version: '6.0.x'
 
       - name: Publish Self-Contained macOS-x64
-        run: |
-          dotnet publish -c Release \
-            -r osx-x64 \
-            --self-contained true \
-            -p:PublishSingleFile=true \
-            -p:PublishTrimmed=true \
-            -p:EnableCompressionInSingleFile=true \
-            -o ./publish
+        run: dotnet publish -c Release -r osx-x64 --self-contained true -p:PublishSingleFile=true -p:PublishTrimmed=true -p:EnableCompressionInSingleFile=true -o ./publish
 
       - name: Make executable
-        run: |
-          chmod +x ./publish/sharp-vless
+        run: chmod +x ./publish/sharp-vless
 
       - name: Tar Artifact
-        run: |
-          tar -czf sharp-vless-macos-x64.tar.gz -C ./publish .
+        run: tar -czf sharp-vless-macos-x64.tar.gz -C ./publish .
 
       - name: Upload Artifact
-        uses: actions/upload-artifact@v4  # ✅ Обновлено
+        uses: actions/upload-artifact@v4
         with:
           name: sharp-vless-macos-x64
           path: sharp-vless-macos-x64.tar.gz
