--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,8 +26,7 @@ jobs:
   run: dotnet publish -c Release -r win-x64 --self-contained true -p:PublishSingleFile=true -p:IncludeNativeLibrariesForSelfExtract=true -o ./publish
 
       - name: Zip Artifact
-        run: |
-          Compress-Archive -Path "./publish/*" -DestinationPath "sharp-vless-windows-x64.zip"
+        run: Compress-Archive -Path "./publish/*" -DestinationPath "sharp-vless-windows-x64.zip"
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
