--- a/VlessClientApp.csproj
+++ b/VlessClientApp.csproj
@@ -10,6 +10,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ApplicationDefinition Include="App.xaml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <!-- ВАЖНО: добавляем MainWindow.xaml как Page -->
+    <Page Include="MainWindow.xaml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="2.2.0" />
   </ItemGroup>
 
